tests/ui/builtin-superkinds/builtin-superkinds-typaram-not-send.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/builtin-superkinds-typaram-not-send.rs:5:32
   |
LL | impl <T: Sync+'static> Foo for T { }
   |                                ^ `T` cannot be sent between threads safely
   |
note: required by a bound in `Foo`
  --> $DIR/builtin-superkinds-typaram-not-send.rs:3:13
   |
LL | trait Foo : Send { }
   |             ^^^^ required by this bound in `Foo`
help: consider further restricting type parameter `T` with trait `Send`
   |
LL | impl <T: Sync+'static + std::marker::Send> Foo for T { }
   |                       +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
